<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="start">

    <com.rsr.covid_19.util.arcShape.ArcView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_collapseMode="parallax"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="@dimen/_24sdp"
        app:shape_arc_position="right">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Language Selector-->
            <androidx.cardview.widget.CardView
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingLeft="@dimen/padding_Small"
                app:contentPaddingRight="@dimen/padding_Double_Extra_Large"
                app:cardBackgroundColor="@color/colorTransAccent"
                android:elevation="@dimen/card_Elevation_Small">

                <!--Nav Items-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/NavItemStyle"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/language" />

                    <include
                        layout="@layout/layout_language_tab"
                        android:layout_width="@dimen/switch_Width"
                        android:layout_height="@dimen/switch_Height"
                        android:layout_marginEnd="@dimen/margin_Medium"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/nav_Bg"
                android:paddingTop="@dimen/padding_Medium"
                android:paddingStart="@dimen/padding_Small"
                android:paddingEnd="@dimen/padding_Double_Extra_Large"
                android:orientation="vertical">

                <!--Nav Item Overview-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navOverview"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_overview"
                    android:text="@string/overview" />

                <!--Nav Item Total Cases-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navGlobalCases"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_global_cases"
                    android:text="@string/globalCases" />

                <!--Nav Item Daily Cases-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navDailyCases"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_daily_cases"
                    android:text="@string/dailyCases" />

                <!--Nav Item Map-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navMap"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_map"
                    android:text="@string/maps" />

                <!--Nav Item Related Topics-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navTopics"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_topics"
                    android:text="@string/covid19" />

                <!--Nav Item Related Videos-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navVideos"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_videos"
                    android:text="@string/relatedVideos" />

                <!--Nav Item Notification-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/navNotification"
                        style="@style/NavItemStyle"
                        android:drawableStart="@drawable/ic_nav_notification"
                        android:text="@string/notification" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/notificationCount"
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:gravity="center"
                        android:background="@drawable/shape_toast"
                        android:backgroundTint="@color/icon_Color_Red"
                        tools:text="01"
                        android:textColor="@color/font_Color_Light"
                        android:textStyle="bold"
                        android:textSize="@dimen/_7ssp"/>

                </FrameLayout>

                <!--Nav Item Share App-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navShare"
                    style="@style/NavItemStyle"
                    android:drawableStart="@drawable/ic_nav_share"
                    android:text="@string/shareApp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.rsr.covid_19.util.arcShape.ArcView>

</com.google.android.material.navigation.NavigationView>