<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_Small"
    android:layout_marginStart="@dimen/margin_Extra_Large"
    android:layout_marginEnd="@dimen/margin_Extra_Large"
    android:layout_marginBottom="@dimen/margin_Medium"
    app:contentPadding="@dimen/padding_Large"
    app:cardBackgroundColor="@color/card_Bg"
    app:cardCornerRadius="@dimen/card_Radius_Medium"
    android:elevation="@dimen/card_Elevation_Small">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countryName"
            style="@style/SmallTvStyle"
            tools:text="Chittagong, Bangladesh"
            android:textSize="@dimen/text_Size_Medium"
            android:textColor="@color/font_Color_Dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Extra_Small"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/affectedCount"
                style="@style/SmallTvStyle"
                android:drawablePadding="@dimen/padding_Extra_Small"
                android:drawableStart="@drawable/ic_affected"
                android:layout_gravity="bottom"
                tools:text="12,345"
                android:textSize="@dimen/text_Size_Extra_Small"
                android:textColor="@color/font_Color_Light"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallTvStyle"
                android:text="@string/peopleAffected"
                android:layout_marginStart="@dimen/margin_Small"
                android:layout_gravity="bottom"
                android:textSize="@dimen/text_Size_Double_Extra_Small"
                android:textColor="@color/font_Color_Dark"/>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Extra_Large"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/SmallTvStyle"
                    android:layout_marginBottom="@dimen/margin_Small"
                    android:text="@string/active"
                    android:textSize="@dimen/text_Size_Extra_Small"
                    android:textColor="@color/font_Color_Green"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/activeCount"
                    style="@style/SmallTvStyle"
                    tools:text="15,909"
                    android:textSize="@dimen/text_Size_Default"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="@dimen/view_Small"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_Small"
                android:background="@color/colorTrans"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/SmallTvStyle"
                    android:layout_marginBottom="@dimen/margin_Small"
                    android:text="@string/deaths"
                    android:textSize="@dimen/text_Size_Extra_Small"
                    android:textColor="@color/font_Color_Red"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/deathCount"
                    style="@style/SmallTvStyle"
                    tools:text="1,909"
                    android:textSize="@dimen/text_Size_Default"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="@dimen/view_Small"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_Small"
                android:background="@color/colorTrans"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/SmallTvStyle"
                    android:layout_marginBottom="@dimen/margin_Small"
                    android:text="@string/recovered"
                    android:textSize="@dimen/text_Size_Extra_Small"
                    android:textColor="@color/font_Color_Green"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recoveredCount"
                    style="@style/SmallTvStyle"
                    tools:text="25,108"
                    android:textSize="@dimen/text_Size_Default"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>